--- a/.env.example
+++ b/.env.example
@@ -5,16 +5,17 @@
 
 # Base de données MySQL
 MYSQL_ROOT_PASSWORD=your_strong_password_here
-MYSQL_DATABASE=flowtrack
-MYSQL_USER=devuser
+MYSQL_DATABASE=DEFAULT_DATABASE_NAME
+MYSQL_USER=USERNAME_HERE
+# Note: Replace USERNAME_HERE with your desired MySQL username
 MYSQL_PASSWORD=your_db_password_here
 
 # Ports d'exposition
-MYSQL_PORT=8090
-BACKEND_PORT=8081
-FRONTEND_PORT=3000
+MYSQL_PORT=expose_port_here
+BACKEND_PORT=expose_backend_port_here
+FRONTEND_PORT=expose_frontend_port_here
 
 # URLs de connexion
-DATABASE_URL=jdbc:mysql://mysql:3306/flowtrack
-SPRING_DATASOURCE_USERNAME=devuser
+DATABASE_URL=url_to_your_database_here
+SPRING_DATASOURCE_USERNAME=spring_user_here
 SPRING_DATASOURCE_PASSWORD=your_db_password_here
